syntax="proto3";

package content_service;
option go_package ="genproto/content_service";

message Id {
    string id = 1;
    string slug = 2;
}

message GetListFilter {
    int32 page = 1;
    int32 limit = 2;
    repeated SortBy sorts = 3;
    repeated Filters filters = 4;
}

message Filters {
    string field = 1;
    string type = 2;
    string value = 3;
}

message SortBy {
    string field = 1;
    string type = 2;
}

message Empty {

}

message MultiLanguage {
    string uz = 1;
    string ru = 2;
    string en = 3;
}