syntax="proto3";

package content_service;
option go_package ="genproto/content_service";

import "common.proto";

message Position {
    string id = 1;
    MultiLanguage title = 2;
    bool active = 3;
    string created_at = 4;
    string updated_at = 5;
}

message Positions {
    int32 count = 1;
    repeated Position items = 2;
}
